Fix: Correct DAST action name to owasp/zap-action-baseline

--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -55,10 +55,11 @@ jobs:
         # Beri waktu 10 detik agar server Flask siap
         sleep 10
     
-    - name: 5. Security - Run DAST (OWASP ZAP)
-      uses: actions/zapaction@v0.2.0
+    # INI YANG BENAR:
+    - name: 5. Security - Run DAST (OWASP ZAP Baseline)
+      uses: owasp/zap-action-baseline@v0.1.1
       with:
         # Target URL aplikasi kita yang sedang berjalan
         target: 'http://localhost:5000'
-        # (Opsional) Kita bisa tentukan file aturan untuk mengabaikan
-        # temuan tertentu, tapi kita biarkan default dulu
+        # Beritahu ZAP untuk tidak gagal jika menemukan 'Informational' issues
+        fail_action: false
