Fix: Revert DAST target to localhost (due to --network=host)

--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -59,5 +59,5 @@ jobs:
     - name: 5. Security - Run DAST (OWASP ZAP Baseline)
       uses: zaproxy/action-baseline@v0.11.0
       with:
-        target: 'http://host.docker.internal:5000' # <--- INI PERBAIKANNYA
+        target: 'http://localhost:5000' # <--- KEMBALI KE SINI
         fail_action: false
