--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -74,5 +74,5 @@ jobs:
     - name: 6. Security - Run DAST (OWASP ZAP Baseline)
       uses: zaproxy/action-baseline@v0.11.0
       with:
-        target: 'http://localhost:5000'
+        target: 'http://127.0.0.1:5000' # <--- GUNAKAN IP
         fail_action: false
