--- a/.github/workflows/security_pipeline.yml
+++ b/.github/workflows/security_pipeline.yml
@@ -75,6 +75,4 @@ jobs:
       uses: zaproxy/action-baseline@v0.11.0
       with:
         target: 'http://127.0.0.1:5000'
-        # Beritahu ZAP untuk GAGAL HANYA jika menemukan 
-        # isu 'HIGH'. (Default-nya 'LOW')
-        fail_level: 'HIGH'
+        min_level: 'HIGH'
